--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   http: ^1.2.1
   shared_preferences: ^2.0.0 
   file_picker: ^4.0.0 
+  flutter_map: ^6.1.0
+  geolocator: ^8.2.1
+
 
 
 
