--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   flutter_rating_bar: ^4.0.0
   permission_handler: ^10.2.0
   image_picker: 1.1.2
-  
+  url_launcher: ^6.0.20
 
 
 
